[FEAT]add decorators

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/MAHT1990/self_nest/issues"
   },
-  "homepage": "https://github.com/MAHT1990/self_nest#readme"
+  "homepage": "https://github.com/MAHT1990/self_nest#readme",
+  "dependencies": {
+    "reflect-metadata": "^0.2.2"
+  }
 }
